# FVM-CFD-prototype

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  readOpenFoamMesh.cpp  run-clang-tidy-sh
app/: CMakeLists.txt  T  heatConduction.cpp
cases/2D-heat-conduction/: log.blockMesh
cases/2D-heat-conduction-on-a-2-by-2-mesh/constant/polyMesh/: neighbour
cases/2D-heat-conduction-on-a-2-by-2-mesh/system/: blockMeshDict
cases/2D-heat-conduction-on-a-3-by-3-mesh/0/: T
cases/2D-heat-conduction-on-a-3-by-3-mesh/constant/polyMesh/: boundary  faces
cases/2D-heat-conduction/constant/polyMesh/: boundary  points
cases/Mycavity/constant/: transportProperties
cases/Mycavity/system/: controlDict  fvSchemes  fvSolution
cases/elbow/constant/polyMesh/: boundary
cases/heat-conduction/2D-heat-conduction-on-a-10-by-10-mesh/1/: T
cases/heat-conduction/2D-heat-conduction-on-a-10-by-10-mesh/constant/polyMesh/: boundary  faces  neighbour  owner  points
cases/heat-conduction/2D-heat-conduction-on-a-10-by-10-mesh/system/: blockMeshDict
cases/heat-conduction/2D-heat-conduction-on-a-2-by-2-mesh/constant/polyMesh/: faces  owner  points
cases/heat-conduction/2D-heat-conduction-on-a-2-by-2-mesh/system/: blockMeshDict
cases/heat-conduction/2D-heat-conduction-on-a-3-by-3-mesh/: log.blockMesh
cases/heat-conduction/2D-heat-conduction-on-a-3-by-3-mesh/constant/polyMesh/: boundary  faces  neighbour  owner  points
cases/heat-conduction/2D-heat-conduction-on-a-3-by-3-mesh/system/: blockMeshDict
cases/heat-conduction/test-setup-of-2D-heat-conduction/constant/polyMesh/: faces
cases/test-2D-heat-conduction/constant/polyMesh/: owner
cases/test-2D-heat-conduction/system/: blockMeshDict
cases/testReadInitialBoundaryConditions/0/: T  U
include/: AssembleDiffusionTerm.hpp  Boundary.h  Boundary.hpp  Cell.hpp  Elements.h  Elements.hpp  Face.h  Face.hpp  Field.hpp  IO.hpp  LinearSolver.hpp  Matrix.hpp  Mesh.h  Mesh.hpp  MeshOld.h  Node.h  Node.hpp  PostProcessing.hpp  ProcessMesh.hpp  ReadInitialBoundaryConditions.hpp  ReadMesh.hpp  arrayOperations.hpp  mesh.h  processMesh.h  processMesh.hpp  readMesh.h  readMesh.hpp  readOpenFoamMesh.h  utilities.hpp  utility.h  utility.hpp
lib/: CMakeLists.txt
readingMesh/: CMakeLists.txt  readOpenFoamMesh.cpp
script/: analytical_sol.py  plot_results.py  run_simulation.sh
src/: AssembleDiffusionTerm.cpp  CMakeLists.txt  IO.cpp  LinearSolver.cpp  Matrix.cpp  PostProcessing.cpp  ProcessMesh.cpp  ReadInitialBoundaryConditions.cpp  ReadMesh.cpp  arrayOperations.cpp  math.cpp  processMesh.cpp  readMesh.cpp  readOpenFoamMesh.cpp  readOpenFoamMeshOld.cpp  utilities.cpp  utility.cpp
tests/: CMakeLists.txt  test-2D-heat-conduction.cpp  testAssembleDiffusionTerm.cpp  testField.cpp  testIO.cpp  testLinearSolver.cpp  testMatrix.cpp  testProcessOpenFoamMesh.cpp  testProcessOpenFoamStructuredMesh.cpp  testProcessOpenFoamUnstructuredMesh.cpp  testReadInitialBoundaryConditions.cpp  testReadOpenFoamMesh.cpp  testReadOpenFoamStructuredMesh.cpp  testReadOpenFoamUnstructuredMesh.cpp  testUtility.hpp  test_add.cpp  utilitiesForTesting.hpp
validation/: analytical-sol.txt
